fix (bidi): implement bidi on 'more' for lesson description and solve hebrew question not getting correct alignmnent after english question

--- a/app/styles/_questionPreview.scss
+++ b/app/styles/_questionPreview.scss
@@ -79,6 +79,7 @@
         &[type=radio] {
             width: 20px;
             height: 20px;
+            outline: none;  // used when implementing directive set-focus
         }
     }
 }
